# SPINNER

./: .gitignore  README.md
src/: CMakeLists.txt  INPUT  calculator.cpp  calculator.h  config.cpp  config.h  generate_config.cpp  generate_config.h  input.cpp  input.h  main.cpp  utils.cpp  utils.h
