CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )

SET ( LMP_PATH /path/to/lammps )
SET ( RANDSPG_PATH /path/to/randspg )
PROJECT ( "SPINNER" )
SET ( PROJECT_VERSION_MAJOR 1 )
SET ( PROJECT_VERSION_MINOR 1 )

SET ( CMAKE_VERBOSE_MAKEFILE true )
SET ( SRC_FILES 
        main.cpp
        generate_config.cpp
        input.cpp )
SET ( CMAKE_CXX_COMPILER "mpicxx" )

ADD_COMPILE_OPTIONS ( -O3 -g -Wall -std=c++11 )
LINK_LIBRARIES( lammps RandSpgLib m )
LINK_DIRECTORIES( ${LMP_PATH}/src ${RANDSPG_PATH}/build )
INCLUDE_DIRECTORIES ( ${LMP_PATH}/src ${RANDSPG_PATH}/include )

ADD_EXECUTABLE ( ${CMAKE_PROJECT_NAME} ${SRC_FILES} )
